syntax = "proto3";

package student;

import "google/protobuf/empty.proto";
import "student/student_creation_request.proto";
import "student/student_request.proto";
import "student/student.proto";

option go_package = "proto/student";

service StudentService {
    rpc GetStudent (StudentRequest) returns (Student);
    rpc CreateStudent(StudentCreationRequest) returns (google.protobuf.Empty);
}
